# bookwriter-openai

./: README.md  beta.py  beta2.py  main.py  openai_local.py  pyproject.toml  utils.py
books/2023-05/07/2023-05-07_00-30-25/: index.json  index.md
books/2023-05/07/2023-05-07_00-36-44/: index.json  index.md
books/2023-05/07/2023-05-07_00-47-13/: index.json  prompt.json
books/2023-05/07/2023-05-07_00-57-58/: index.json  index.md  prompt.json
books/2023-05/07/2023-05-07_01-15-55/: index.json  index.md  prompt_chapter_2.1.json  subchapter_2.1.md
books/2023-05/07/2023-05-07_01-55-51/: index.md  prompt.json
books/2023-05/07/2023-05-07_01-58-38/: index.json  index.md
books/2023-05/07/2023-05-07_02-03-11/: index.md
books/2023-05/07/2023-05-07_02-04-52/: index.json  prompt.json
books/2023-05/07/2023-05-07_02-10-37/: index.json  index.md  prompt.json  prompt_chapter_2.1.json  subchapter_2.1.md
books/2023-05/07/2023-05-07_02-21-18/: index.json  index.md  prompt.json
books/2023-05/07/2023-05-07_02-25-41/: index.json  index.md  prompt.json
books/2023-05/07/2023-05-07_02-47-19/: index.md
books/2023-05/07/2023-05-07_02-53-43/: index.md
books/2023-05/07/2023-05-07_02-53-43/sections/: prompt_1.1.1.json  prompt_1.2.2.json  prompt_3.1.1.json  prompt_3.2.1.json  prompt_3.2.2.json  (+5 more)
books/2023-05/07/2023-05-07_05-27-10/: index.json  index.md
books/2023-05/07/2023-05-07_06-13-48/: index.json  index.md
books_consultant/2023-06/09/2023-06-09_13-18-59/: index.json  index.md  prompt.json
src/: book_handler.py  dummy.py  logger.py  main.py  model.py
(+4 files in other folders)
